--- a/bitrix/components/bitrix/pdf.viewer/pdfjs/locale/ru/viewer.properties
+++ b/bitrix/components/bitrix/pdf.viewer/pdfjs/locale/ru/viewer.properties
@@ -2,121 +2,121 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-previous.title = Предыдущая страница
-previous_label = Предыдущая
-next.title = Следующая страница
-next_label = Следующая
-page.title = Страница
-of_pages=из {{pagesCount}}
-page_of_pages=({{pageNumber}} из {{pagesCount}})
-zoom_out.title = Уменьшить
-zoom_out_label = Уменьшить
-zoom_in.title = Увеличить
-zoom_in_label = Увеличить
-zoom.title = Масштаб
-presentation_mode.title = Перейти в режим презентации
-presentation_mode_label = Режим презентации
-open_file.title = Открыть файл
-open_file_label = Открыть
-print.title = Печать
-print_label = Печать
-download.title = Загрузить
-download_label = Загрузить
-bookmark.title = Ссылка на текущий вид (скопировать или открыть в новом окне)
-bookmark_label = Текущий вид
-tools.title = Инструменты
-tools_label = Инструменты
-first_page.title = Перейти на первую страницу
-first_page.label = Перейти на первую страницу
-first_page_label = Перейти на первую страницу
-last_page.title = Перейти на последнюю страницу
-last_page.label = Перейти на последнюю страницу
-last_page_label = Перейти на последнюю страницу
-page_rotate_cw.title = Повернуть по часовой стрелке
-page_rotate_cw.label = Повернуть по часовой стрелке
-page_rotate_cw_label = Повернуть по часовой стрелке
-page_rotate_ccw.title = Повернуть против часовой стрелки
-page_rotate_ccw.label = Повернуть против часовой стрелки
-page_rotate_ccw_label = Повернуть против часовой стрелки
-hand_tool_enable.title = Включить Инструмент «Рука»
-hand_tool_enable_label = Включить Инструмент «Рука»
-hand_tool_disable.title = Отключить Инструмент «Рука»
-hand_tool_disable_label = Отключить Инструмент «Рука»
-document_properties.title = Свойства документа…
-document_properties_label = Свойства документа…
-document_properties_file_name = Имя файла:
-document_properties_file_size = Размер файла:
-document_properties_kb = {{size_kb}} КБ ({{size_b}} байт)
-document_properties_mb = {{size_mb}} МБ ({{size_b}} байт)
-document_properties_title = Заголовок:
-document_properties_author = Автор:
-document_properties_subject = Тема:
-document_properties_keywords = Ключевые слова:
-document_properties_creation_date = Дата создания:
-document_properties_modification_date = Дата изменения:
+previous.title = РџСЂРµРґС‹РґСѓС‰Р°СЏ СЃС‚СЂР°РЅРёС†Р°
+previous_label = РџСЂРµРґС‹РґСѓС‰Р°СЏ
+next.title = РЎР»РµРґСѓСЋС‰Р°СЏ СЃС‚СЂР°РЅРёС†Р°
+next_label = РЎР»РµРґСѓСЋС‰Р°СЏ
+page.title = РЎС‚СЂР°РЅРёС†Р°
+of_pages=РёР· {{pagesCount}}
+page_of_pages=({{pageNumber}} РёР· {{pagesCount}})
+zoom_out.title = РЈРјРµРЅСЊС€РёС‚СЊ
+zoom_out_label = РЈРјРµРЅСЊС€РёС‚СЊ
+zoom_in.title = РЈРІРµР»РёС‡РёС‚СЊ
+zoom_in_label = РЈРІРµР»РёС‡РёС‚СЊ
+zoom.title = РњР°СЃС€С‚Р°Р±
+presentation_mode.title = РџРµСЂРµР№С‚Рё РІ СЂРµР¶РёРј РїСЂРµР·РµРЅС‚Р°С†РёРё
+presentation_mode_label = Р РµР¶РёРј РїСЂРµР·РµРЅС‚Р°С†РёРё
+open_file.title = РћС‚РєСЂС‹С‚СЊ С„Р°Р№Р»
+open_file_label = РћС‚РєСЂС‹С‚СЊ
+print.title = РџРµС‡Р°С‚СЊ
+print_label = РџРµС‡Р°С‚СЊ
+download.title = Р—Р°РіСЂСѓР·РёС‚СЊ
+download_label = Р—Р°РіСЂСѓР·РёС‚СЊ
+bookmark.title = РЎСЃС‹Р»РєР° РЅР° С‚РµРєСѓС‰РёР№ РІРёРґ (СЃРєРѕРїРёСЂРѕРІР°С‚СЊ РёР»Рё РѕС‚РєСЂС‹С‚СЊ РІ РЅРѕРІРѕРј РѕРєРЅРµ)
+bookmark_label = РўРµРєСѓС‰РёР№ РІРёРґ
+tools.title = РРЅСЃС‚СЂСѓРјРµРЅС‚С‹
+tools_label = РРЅСЃС‚СЂСѓРјРµРЅС‚С‹
+first_page.title = РџРµСЂРµР№С‚Рё РЅР° РїРµСЂРІСѓСЋ СЃС‚СЂР°РЅРёС†Сѓ
+first_page.label = РџРµСЂРµР№С‚Рё РЅР° РїРµСЂРІСѓСЋ СЃС‚СЂР°РЅРёС†Сѓ
+first_page_label = РџРµСЂРµР№С‚Рё РЅР° РїРµСЂРІСѓСЋ СЃС‚СЂР°РЅРёС†Сѓ
+last_page.title = РџРµСЂРµР№С‚Рё РЅР° РїРѕСЃР»РµРґРЅСЋСЋ СЃС‚СЂР°РЅРёС†Сѓ
+last_page.label = РџРµСЂРµР№С‚Рё РЅР° РїРѕСЃР»РµРґРЅСЋСЋ СЃС‚СЂР°РЅРёС†Сѓ
+last_page_label = РџРµСЂРµР№С‚Рё РЅР° РїРѕСЃР»РµРґРЅСЋСЋ СЃС‚СЂР°РЅРёС†Сѓ
+page_rotate_cw.title = РџРѕРІРµСЂРЅСѓС‚СЊ РїРѕ С‡Р°СЃРѕРІРѕР№ СЃС‚СЂРµР»РєРµ
+page_rotate_cw.label = РџРѕРІРµСЂРЅСѓС‚СЊ РїРѕ С‡Р°СЃРѕРІРѕР№ СЃС‚СЂРµР»РєРµ
+page_rotate_cw_label = РџРѕРІРµСЂРЅСѓС‚СЊ РїРѕ С‡Р°СЃРѕРІРѕР№ СЃС‚СЂРµР»РєРµ
+page_rotate_ccw.title = РџРѕРІРµСЂРЅСѓС‚СЊ РїСЂРѕС‚РёРІ С‡Р°СЃРѕРІРѕР№ СЃС‚СЂРµР»РєРё
+page_rotate_ccw.label = РџРѕРІРµСЂРЅСѓС‚СЊ РїСЂРѕС‚РёРІ С‡Р°СЃРѕРІРѕР№ СЃС‚СЂРµР»РєРё
+page_rotate_ccw_label = РџРѕРІРµСЂРЅСѓС‚СЊ РїСЂРѕС‚РёРІ С‡Р°СЃРѕРІРѕР№ СЃС‚СЂРµР»РєРё
+hand_tool_enable.title = Р’РєР»СЋС‡РёС‚СЊ РРЅСЃС‚СЂСѓРјРµРЅС‚ В«Р СѓРєР°В»
+hand_tool_enable_label = Р’РєР»СЋС‡РёС‚СЊ РРЅСЃС‚СЂСѓРјРµРЅС‚ В«Р СѓРєР°В»
+hand_tool_disable.title = РћС‚РєР»СЋС‡РёС‚СЊ РРЅСЃС‚СЂСѓРјРµРЅС‚ В«Р СѓРєР°В»
+hand_tool_disable_label = РћС‚РєР»СЋС‡РёС‚СЊ РРЅСЃС‚СЂСѓРјРµРЅС‚ В«Р СѓРєР°В»
+document_properties.title = РЎРІРѕР№СЃС‚РІР° РґРѕРєСѓРјРµРЅС‚Р°вЂ¦
+document_properties_label = РЎРІРѕР№СЃС‚РІР° РґРѕРєСѓРјРµРЅС‚Р°вЂ¦
+document_properties_file_name = РРјСЏ С„Р°Р№Р»Р°:
+document_properties_file_size = Р Р°Р·РјРµСЂ С„Р°Р№Р»Р°:
+document_properties_kb = {{size_kb}} РљР‘ ({{size_b}} Р±Р°Р№С‚)
+document_properties_mb = {{size_mb}} РњР‘ ({{size_b}} Р±Р°Р№С‚)
+document_properties_title = Р—Р°РіРѕР»РѕРІРѕРє:
+document_properties_author = РђРІС‚РѕСЂ:
+document_properties_subject = РўРµРјР°:
+document_properties_keywords = РљР»СЋС‡РµРІС‹Рµ СЃР»РѕРІР°:
+document_properties_creation_date = Р”Р°С‚Р° СЃРѕР·РґР°РЅРёСЏ:
+document_properties_modification_date = Р”Р°С‚Р° РёР·РјРµРЅРµРЅРёСЏ:
 document_properties_date_string = {{date}}, {{time}}
-document_properties_creator = Приложение:
-document_properties_producer = Производитель PDF:
-document_properties_version = Версия PDF:
-document_properties_page_count = Число страниц:
-document_properties_close = Закрыть
-print_progress_message = Подготовка документа к печати…
+document_properties_creator = РџСЂРёР»РѕР¶РµРЅРёРµ:
+document_properties_producer = РџСЂРѕРёР·РІРѕРґРёС‚РµР»СЊ PDF:
+document_properties_version = Р’РµСЂСЃРёСЏ PDF:
+document_properties_page_count = Р§РёСЃР»Рѕ СЃС‚СЂР°РЅРёС†:
+document_properties_close = Р—Р°РєСЂС‹С‚СЊ
+print_progress_message = РџРѕРґРіРѕС‚РѕРІРєР° РґРѕРєСѓРјРµРЅС‚Р° Рє РїРµС‡Р°С‚РёвЂ¦
 print_progress_percent = {{progress}}%
-print_progress_close = Отмена
-toggle_sidebar.title=Показать/скрыть боковую панель
-toggle_sidebar_notification.title=Показать/скрыть боковую панель (документ имеет содержание/вложения)
-toggle_sidebar_label=Показать/скрыть боковую панель
-document_outline.title = Показать содержание документа (двойной щелчок, чтобы развернуть/свернуть все элементы)
-document_outline_label = Содержание документа
-attachments.title = Показать вложения
-attachments_label = Вложения
-thumbs.title = Показать миниатюры
-thumbs_label = Миниатюры
-findbar.title = Найти в документе
-findbar_label = Найти
-thumb_page_title = Страница {{page}}
-thumb_page_canvas = Миниатюра страницы {{page}}
-find_label = Найти:
-find_previous.title = Найти предыдущее вхождение фразы в текст
-find_previous_label = Назад
-find_next.title = Найти следующее вхождение фразы в текст
-find_next_label = Далее
-find_highlight = Подсветить все
-find_match_case_label = С учётом регистра
-find_reached_top = Достигнут верх документа, продолжено снизу
-find_reached_bottom = Достигнут конец документа, продолжено сверху
-find_not_found = Фраза не найдена
-error_more_info = Детали
-error_less_info = Скрыть детали
-error_close = Закрыть
-error_version_info = PDF.js v{{version}} (сборка: {{build}})
-error_message = Сообщение: {{message}}
-error_stack = Стeк: {{stack}}
-error_file = Файл: {{file}}
-error_line = Строка: {{line}}
-rendering_error = При создании страницы произошла ошибка.
-page_scale_width = По ширине страницы
-page_scale_fit = По размеру страницы
-page_scale_auto = Автоматически
-page_scale_actual = Реальный размер
+print_progress_close = РћС‚РјРµРЅР°
+toggle_sidebar.title=РџРѕРєР°Р·Р°С‚СЊ/СЃРєСЂС‹С‚СЊ Р±РѕРєРѕРІСѓСЋ РїР°РЅРµР»СЊ
+toggle_sidebar_notification.title=РџРѕРєР°Р·Р°С‚СЊ/СЃРєСЂС‹С‚СЊ Р±РѕРєРѕРІСѓСЋ РїР°РЅРµР»СЊ (РґРѕРєСѓРјРµРЅС‚ РёРјРµРµС‚ СЃРѕРґРµСЂР¶Р°РЅРёРµ/РІР»РѕР¶РµРЅРёСЏ)
+toggle_sidebar_label=РџРѕРєР°Р·Р°С‚СЊ/СЃРєСЂС‹С‚СЊ Р±РѕРєРѕРІСѓСЋ РїР°РЅРµР»СЊ
+document_outline.title = РџРѕРєР°Р·Р°С‚СЊ СЃРѕРґРµСЂР¶Р°РЅРёРµ РґРѕРєСѓРјРµРЅС‚Р° (РґРІРѕР№РЅРѕР№ С‰РµР»С‡РѕРє, С‡С‚РѕР±С‹ СЂР°Р·РІРµСЂРЅСѓС‚СЊ/СЃРІРµСЂРЅСѓС‚СЊ РІСЃРµ СЌР»РµРјРµРЅС‚С‹)
+document_outline_label = РЎРѕРґРµСЂР¶Р°РЅРёРµ РґРѕРєСѓРјРµРЅС‚Р°
+attachments.title = РџРѕРєР°Р·Р°С‚СЊ РІР»РѕР¶РµРЅРёСЏ
+attachments_label = Р’Р»РѕР¶РµРЅРёСЏ
+thumbs.title = РџРѕРєР°Р·Р°С‚СЊ РјРёРЅРёР°С‚СЋСЂС‹
+thumbs_label = РњРёРЅРёР°С‚СЋСЂС‹
+findbar.title = РќР°Р№С‚Рё РІ РґРѕРєСѓРјРµРЅС‚Рµ
+findbar_label = РќР°Р№С‚Рё
+thumb_page_title = РЎС‚СЂР°РЅРёС†Р° {{page}}
+thumb_page_canvas = РњРёРЅРёР°С‚СЋСЂР° СЃС‚СЂР°РЅРёС†С‹ {{page}}
+find_label = РќР°Р№С‚Рё:
+find_previous.title = РќР°Р№С‚Рё РїСЂРµРґС‹РґСѓС‰РµРµ РІС…РѕР¶РґРµРЅРёРµ С„СЂР°Р·С‹ РІ С‚РµРєСЃС‚
+find_previous_label = РќР°Р·Р°Рґ
+find_next.title = РќР°Р№С‚Рё СЃР»РµРґСѓСЋС‰РµРµ РІС…РѕР¶РґРµРЅРёРµ С„СЂР°Р·С‹ РІ С‚РµРєСЃС‚
+find_next_label = Р”Р°Р»РµРµ
+find_highlight = РџРѕРґСЃРІРµС‚РёС‚СЊ РІСЃРµ
+find_match_case_label = РЎ СѓС‡С‘С‚РѕРј СЂРµРіРёСЃС‚СЂР°
+find_reached_top = Р”РѕСЃС‚РёРіРЅСѓС‚ РІРµСЂС… РґРѕРєСѓРјРµРЅС‚Р°, РїСЂРѕРґРѕР»Р¶РµРЅРѕ СЃРЅРёР·Сѓ
+find_reached_bottom = Р”РѕСЃС‚РёРіРЅСѓС‚ РєРѕРЅРµС† РґРѕРєСѓРјРµРЅС‚Р°, РїСЂРѕРґРѕР»Р¶РµРЅРѕ СЃРІРµСЂС…Сѓ
+find_not_found = Р¤СЂР°Р·Р° РЅРµ РЅР°Р№РґРµРЅР°
+error_more_info = Р”РµС‚Р°Р»Рё
+error_less_info = РЎРєСЂС‹С‚СЊ РґРµС‚Р°Р»Рё
+error_close = Р—Р°РєСЂС‹С‚СЊ
+error_version_info = PDF.js v{{version}} (СЃР±РѕСЂРєР°: {{build}})
+error_message = РЎРѕРѕР±С‰РµРЅРёРµ: {{message}}
+error_stack = РЎС‚eРє: {{stack}}
+error_file = Р¤Р°Р№Р»: {{file}}
+error_line = РЎС‚СЂРѕРєР°: {{line}}
+rendering_error = РџСЂРё СЃРѕР·РґР°РЅРёРё СЃС‚СЂР°РЅРёС†С‹ РїСЂРѕРёР·РѕС€Р»Р° РѕС€РёР±РєР°.
+page_scale_width = РџРѕ С€РёСЂРёРЅРµ СЃС‚СЂР°РЅРёС†С‹
+page_scale_fit = РџРѕ СЂР°Р·РјРµСЂСѓ СЃС‚СЂР°РЅРёС†С‹
+page_scale_auto = РђРІС‚РѕРјР°С‚РёС‡РµСЃРєРё
+page_scale_actual = Р РµР°Р»СЊРЅС‹Р№ СЂР°Р·РјРµСЂ
 page_scale_percent = {{scale}}%
-loading_error_indicator = Ошибка
-loading_error = При загрузке PDF произошла ошибка.
-invalid_file_error = Некорректный или повреждённый PDF-файл.
-missing_file_error = PDF-файл отсутствует.
-unexpected_response_error = Неожиданный ответ сервера.
-text_annotation_type.alt = [Аннотация {{type}}]
-password_label = Введите пароль, чтобы открыть этот PDF-файл.
-password_invalid = Неверный пароль. Пожалуйста, попробуйте снова.
+loading_error_indicator = РћС€РёР±РєР°
+loading_error = РџСЂРё Р·Р°РіСЂСѓР·РєРµ PDF РїСЂРѕРёР·РѕС€Р»Р° РѕС€РёР±РєР°.
+invalid_file_error = РќРµРєРѕСЂСЂРµРєС‚РЅС‹Р№ РёР»Рё РїРѕРІСЂРµР¶РґС‘РЅРЅС‹Р№ PDF-С„Р°Р№Р».
+missing_file_error = PDF-С„Р°Р№Р» РѕС‚СЃСѓС‚СЃС‚РІСѓРµС‚.
+unexpected_response_error = РќРµРѕР¶РёРґР°РЅРЅС‹Р№ РѕС‚РІРµС‚ СЃРµСЂРІРµСЂР°.
+text_annotation_type.alt = [РђРЅРЅРѕС‚Р°С†РёСЏ {{type}}]
+password_label = Р’РІРµРґРёС‚Рµ РїР°СЂРѕР»СЊ, С‡С‚РѕР±С‹ РѕС‚РєСЂС‹С‚СЊ СЌС‚РѕС‚ PDF-С„Р°Р№Р».
+password_invalid = РќРµРІРµСЂРЅС‹Р№ РїР°СЂРѕР»СЊ. РџРѕР¶Р°Р»СѓР№СЃС‚Р°, РїРѕРїСЂРѕР±СѓР№С‚Рµ СЃРЅРѕРІР°.
 password_ok = OK
-password_cancel = Отмена
-printing_not_supported = Предупреждение: В этом браузере не полностью поддерживается печать.
-printing_not_ready = Предупреждение: PDF не полностью загружен для печати.
-web_fonts_disabled = Веб-шрифты отключены: невозможно использовать встроенные PDF-шрифты.
-document_colors_not_allowed = PDF-документам не разрешено использовать свои цвета: в браузере отключён параметр «Разрешить веб-сайтам использовать свои цвета».
-find_input.title=Найти
-find_input.placeholder=Найти в документе...
-cursor_text_select_tool.title=Включить Инструмент «Выделение текста»
-cursor_text_select_tool_label=Инструмент «Выделение текста»
-cursor_hand_tool.title=Включить Инструмент «Рука»
-cursor_hand_tool_label=Инструмент «Рука»
+password_cancel = РћС‚РјРµРЅР°
+printing_not_supported = РџСЂРµРґСѓРїСЂРµР¶РґРµРЅРёРµ: Р’ СЌС‚РѕРј Р±СЂР°СѓР·РµСЂРµ РЅРµ РїРѕР»РЅРѕСЃС‚СЊСЋ РїРѕРґРґРµСЂР¶РёРІР°РµС‚СЃСЏ РїРµС‡Р°С‚СЊ.
+printing_not_ready = РџСЂРµРґСѓРїСЂРµР¶РґРµРЅРёРµ: PDF РЅРµ РїРѕР»РЅРѕСЃС‚СЊСЋ Р·Р°РіСЂСѓР¶РµРЅ РґР»СЏ РїРµС‡Р°С‚Рё.
+web_fonts_disabled = Р’РµР±-С€СЂРёС„С‚С‹ РѕС‚РєР»СЋС‡РµРЅС‹: РЅРµРІРѕР·РјРѕР¶РЅРѕ РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊ РІСЃС‚СЂРѕРµРЅРЅС‹Рµ PDF-С€СЂРёС„С‚С‹.
+document_colors_not_allowed = PDF-РґРѕРєСѓРјРµРЅС‚Р°Рј РЅРµ СЂР°Р·СЂРµС€РµРЅРѕ РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊ СЃРІРѕРё С†РІРµС‚Р°: РІ Р±СЂР°СѓР·РµСЂРµ РѕС‚РєР»СЋС‡С‘РЅ РїР°СЂР°РјРµС‚СЂ В«Р Р°Р·СЂРµС€РёС‚СЊ РІРµР±-СЃР°Р№С‚Р°Рј РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊ СЃРІРѕРё С†РІРµС‚Р°В».
+find_input.title=РќР°Р№С‚Рё
+find_input.placeholder=РќР°Р№С‚Рё РІ РґРѕРєСѓРјРµРЅС‚Рµ...
+cursor_text_select_tool.title=Р’РєР»СЋС‡РёС‚СЊ РРЅСЃС‚СЂСѓРјРµРЅС‚ В«Р’С‹РґРµР»РµРЅРёРµ С‚РµРєСЃС‚Р°В»
+cursor_text_select_tool_label=РРЅСЃС‚СЂСѓРјРµРЅС‚ В«Р’С‹РґРµР»РµРЅРёРµ С‚РµРєСЃС‚Р°В»
+cursor_hand_tool.title=Р’РєР»СЋС‡РёС‚СЊ РРЅСЃС‚СЂСѓРјРµРЅС‚ В«Р СѓРєР°В»
+cursor_hand_tool_label=РРЅСЃС‚СЂСѓРјРµРЅС‚ В«Р СѓРєР°В»
