--- a/bitrix/components/bitrix/pdf.viewer/pdfjs/locale/ua/viewer.properties
+++ b/bitrix/components/bitrix/pdf.viewer/pdfjs/locale/ua/viewer.properties
@@ -2,115 +2,115 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-previous.title = Попередня сторінка
-previous_label = Попередня
-next.title = Наступна сторінка
-next_label = Наступна
-page.title = Сторінка
-of_pages = з {{pagesCount}}
-page_of_pages = ({{pageNumber}} з {{pagesCount}})
-zoom_out.title = Зменшити
-zoom_out_label = Зменшити
-zoom_in.title = Збільшити
-zoom_in_label = Збільшити
-zoom.title = Масштаб
-presentation_mode.title = Перейти в режим презентації
-presentation_mode_label = Режим презентації
-open_file.title = Відкрити файл
-open_file_label = Відкрити
-print.title = Друк
-print_label = Друк
-download.title = Завантажити
-download_label = Завантажити
-bookmark.title = Посилання на поточний вигляд (скопіювати або відкрити в новому вікні)
-bookmark_label = Поточний вигляд
-tools.title = Інструменти
-tools_label = Інструменти
-first_page.title = Перейти на першу сторінку
-first_page.label = Перейти на першу сторінку
-first_page_label = Перейти на першу сторінку
-last_page.title = Перейти на останню сторінку
-last_page.label = Перейти на останню сторінку
-last_page_label = Перейти на останню сторінку
-page_rotate_cw.title = Повернути за годинниковою стрілкою
-page_rotate_cw.label = Повернути за годинниковою стрілкою
-page_rotate_cw_label = Повернути за годинниковою стрілкою
-page_rotate_ccw.title = Повернути проти годинникової стрілки
-page_rotate_ccw.label = Повернути проти годинникової стрілки
-page_rotate_ccw_label = Повернути проти годинникової стрілки
-hand_tool_enable.title = Включити Інструмент «Рука»
-hand_tool_enable_label = Включити Інструмент «Рука»
-hand_tool_disable.title = Відключити Інструмент «Рука»
-hand_tool_disable_label = Відключити Інструмент «Рука»
-document_properties.title = Властивості документа...
-document_properties_label = Властивості документа...
-document_properties_file_name = Ім'я файлу:
-document_properties_file_size = Розмір файлу:
-document_properties_kb = {{size_kb}} КБ ({{size_b}} байт)
-document_properties_mb = {{size_mb}} МБ ({{size_b}} байт)
-document_properties_title = Заголовок:
-document_properties_author = Автор:
-document_properties_subject = Тема:
-document_properties_keywords = Ключові слова:
-document_properties_creation_date = Дата створення:
-document_properties_modification_date = Дата зміни:
+previous.title = РџРѕРїРµСЂРµРґРЅСЏ СЃС‚РѕСЂС–РЅРєР°
+previous_label = РџРѕРїРµСЂРµРґРЅСЏ
+next.title = РќР°СЃС‚СѓРїРЅР° СЃС‚РѕСЂС–РЅРєР°
+next_label = РќР°СЃС‚СѓРїРЅР°
+page.title = РЎС‚РѕСЂС–РЅРєР°
+of_pages = Р· {{pagesCount}}
+page_of_pages = ({{pageNumber}} Р· {{pagesCount}})
+zoom_out.title = Р—РјРµРЅС€РёС‚Рё
+zoom_out_label = Р—РјРµРЅС€РёС‚Рё
+zoom_in.title = Р—Р±С–Р»СЊС€РёС‚Рё
+zoom_in_label = Р—Р±С–Р»СЊС€РёС‚Рё
+zoom.title = РњР°СЃС€С‚Р°Р±
+presentation_mode.title = РџРµСЂРµР№С‚Рё РІ СЂРµР¶РёРј РїСЂРµР·РµРЅС‚Р°С†С–С—
+presentation_mode_label = Р РµР¶РёРј РїСЂРµР·РµРЅС‚Р°С†С–С—
+open_file.title = Р’С–РґРєСЂРёС‚Рё С„Р°Р№Р»
+open_file_label = Р’С–РґРєСЂРёС‚Рё
+print.title = Р”СЂСѓРє
+print_label = Р”СЂСѓРє
+download.title = Р—Р°РІР°РЅС‚Р°Р¶РёС‚Рё
+download_label = Р—Р°РІР°РЅС‚Р°Р¶РёС‚Рё
+bookmark.title = РџРѕСЃРёР»Р°РЅРЅСЏ РЅР° РїРѕС‚РѕС‡РЅРёР№ РІРёРіР»СЏРґ (СЃРєРѕРїС–СЋРІР°С‚Рё Р°Р±Рѕ РІС–РґРєСЂРёС‚Рё РІ РЅРѕРІРѕРјСѓ РІС–РєРЅС–)
+bookmark_label = РџРѕС‚РѕС‡РЅРёР№ РІРёРіР»СЏРґ
+tools.title = Р†РЅСЃС‚СЂСѓРјРµРЅС‚Рё
+tools_label = Р†РЅСЃС‚СЂСѓРјРµРЅС‚Рё
+first_page.title = РџРµСЂРµР№С‚Рё РЅР° РїРµСЂС€Сѓ СЃС‚РѕСЂС–РЅРєСѓ
+first_page.label = РџРµСЂРµР№С‚Рё РЅР° РїРµСЂС€Сѓ СЃС‚РѕСЂС–РЅРєСѓ
+first_page_label = РџРµСЂРµР№С‚Рё РЅР° РїРµСЂС€Сѓ СЃС‚РѕСЂС–РЅРєСѓ
+last_page.title = РџРµСЂРµР№С‚Рё РЅР° РѕСЃС‚Р°РЅРЅСЋ СЃС‚РѕСЂС–РЅРєСѓ
+last_page.label = РџРµСЂРµР№С‚Рё РЅР° РѕСЃС‚Р°РЅРЅСЋ СЃС‚РѕСЂС–РЅРєСѓ
+last_page_label = РџРµСЂРµР№С‚Рё РЅР° РѕСЃС‚Р°РЅРЅСЋ СЃС‚РѕСЂС–РЅРєСѓ
+page_rotate_cw.title = РџРѕРІРµСЂРЅСѓС‚Рё Р·Р° РіРѕРґРёРЅРЅРёРєРѕРІРѕСЋ СЃС‚СЂС–Р»РєРѕСЋ
+page_rotate_cw.label = РџРѕРІРµСЂРЅСѓС‚Рё Р·Р° РіРѕРґРёРЅРЅРёРєРѕРІРѕСЋ СЃС‚СЂС–Р»РєРѕСЋ
+page_rotate_cw_label = РџРѕРІРµСЂРЅСѓС‚Рё Р·Р° РіРѕРґРёРЅРЅРёРєРѕРІРѕСЋ СЃС‚СЂС–Р»РєРѕСЋ
+page_rotate_ccw.title = РџРѕРІРµСЂРЅСѓС‚Рё РїСЂРѕС‚Рё РіРѕРґРёРЅРЅРёРєРѕРІРѕС— СЃС‚СЂС–Р»РєРё
+page_rotate_ccw.label = РџРѕРІРµСЂРЅСѓС‚Рё РїСЂРѕС‚Рё РіРѕРґРёРЅРЅРёРєРѕРІРѕС— СЃС‚СЂС–Р»РєРё
+page_rotate_ccw_label = РџРѕРІРµСЂРЅСѓС‚Рё РїСЂРѕС‚Рё РіРѕРґРёРЅРЅРёРєРѕРІРѕС— СЃС‚СЂС–Р»РєРё
+hand_tool_enable.title = Р’РєР»СЋС‡РёС‚Рё Р†РЅСЃС‚СЂСѓРјРµРЅС‚ В«Р СѓРєР°В»
+hand_tool_enable_label = Р’РєР»СЋС‡РёС‚Рё Р†РЅСЃС‚СЂСѓРјРµРЅС‚ В«Р СѓРєР°В»
+hand_tool_disable.title = Р’С–РґРєР»СЋС‡РёС‚Рё Р†РЅСЃС‚СЂСѓРјРµРЅС‚ В«Р СѓРєР°В»
+hand_tool_disable_label = Р’С–РґРєР»СЋС‡РёС‚Рё Р†РЅСЃС‚СЂСѓРјРµРЅС‚ В«Р СѓРєР°В»
+document_properties.title = Р’Р»Р°СЃС‚РёРІРѕСЃС‚С– РґРѕРєСѓРјРµРЅС‚Р°...
+document_properties_label = Р’Р»Р°СЃС‚РёРІРѕСЃС‚С– РґРѕРєСѓРјРµРЅС‚Р°...
+document_properties_file_name = Р†Рј'СЏ С„Р°Р№Р»Сѓ:
+document_properties_file_size = Р РѕР·РјС–СЂ С„Р°Р№Р»Сѓ:
+document_properties_kb = {{size_kb}} РљР‘ ({{size_b}} Р±Р°Р№С‚)
+document_properties_mb = {{size_mb}} РњР‘ ({{size_b}} Р±Р°Р№С‚)
+document_properties_title = Р—Р°РіРѕР»РѕРІРѕРє:
+document_properties_author = РђРІС‚РѕСЂ:
+document_properties_subject = РўРµРјР°:
+document_properties_keywords = РљР»СЋС‡РѕРІС– СЃР»РѕРІР°:
+document_properties_creation_date = Р”Р°С‚Р° СЃС‚РІРѕСЂРµРЅРЅСЏ:
+document_properties_modification_date = Р”Р°С‚Р° Р·РјС–РЅРё:
 document_properties_date_string = {{date}}, {{time}}
-document_properties_creator = Додаток:
-document_properties_producer = Виробник PDF:
-document_properties_version = Версія PDF:
-document_properties_page_count = Кількість сторінок:
-document_properties_close = Закрити
-print_progress_message = Підготовка документа до друку...
+document_properties_creator = Р”РѕРґР°С‚РѕРє:
+document_properties_producer = Р’РёСЂРѕР±РЅРёРє PDF:
+document_properties_version = Р’РµСЂСЃС–СЏ PDF:
+document_properties_page_count = РљС–Р»СЊРєС–СЃС‚СЊ СЃС‚РѕСЂС–РЅРѕРє:
+document_properties_close = Р—Р°РєСЂРёС‚Рё
+print_progress_message = РџС–РґРіРѕС‚РѕРІРєР° РґРѕРєСѓРјРµРЅС‚Р° РґРѕ РґСЂСѓРєСѓ...
 print_progress_percent = {{progress}}%
-print_progress_close = Скасування
-toggle_sidebar.title = Показати/приховати бічну панель
-toggle_sidebar_notification.title = Показати/приховати бічну панель (документ має зміст/вкладення)
-toggle_sidebar_label = Показати/приховати бічну панель
-document_outline.title = Показати зміст документа (подвійний клік, щоб розгорнути/згорнути всі елементи)
-document_outline_label = Зміст документа
-attachments.title = Показати вкладення
-attachments_label = Вкладення
-thumbs.title = Показати мініатюри
-thumbs_label = Мініатюри
-findbar.title = Знайти в документі
-findbar_label = Знайти
-thumb_page_title = Сторінка {{page}}
-thumb_page_canvas = Мініатюра сторінки {{page}}
-find_label = Знайти:
-find_previous.title = Знайти попереднє входження фрази до тексту
-find_previous_label = Назад
-find_next.title = Знайти наступне входження фрази до тексту
-find_next_label = Далі
-find_highlight = Підсвітити всі
-find_match_case_label = З урахуванням регістру
-find_reached_top = Досягнутий верх документа, продовжено знизу
-find_reached_bottom = Досягнутий кінець документа, продовжено зверху
-find_not_found = Фразу не знайдено
-error_more_info = Деталі
-error_less_info = Приховати деталі
-error_close = Закрити
-error_version_info = PDF.js v{{version}} (збірка: {{build}})
-error_message = Повідомлення: {{message}}
-error_stack = Стек: {{stack}}
-error_file = Файл: {{file}}
-error_line = Рядок: {{line}}
-rendering_error = При створенні сторінки виникла помилка.
-page_scale_width = За шириною сторінки
-page_scale_fit = За розміром сторінки
-page_scale_auto = Автоматично
-page_scale_actual = Реальний розмір
+print_progress_close = РЎРєР°СЃСѓРІР°РЅРЅСЏ
+toggle_sidebar.title = РџРѕРєР°Р·Р°С‚Рё/РїСЂРёС…РѕРІР°С‚Рё Р±С–С‡РЅСѓ РїР°РЅРµР»СЊ
+toggle_sidebar_notification.title = РџРѕРєР°Р·Р°С‚Рё/РїСЂРёС…РѕРІР°С‚Рё Р±С–С‡РЅСѓ РїР°РЅРµР»СЊ (РґРѕРєСѓРјРµРЅС‚ РјР°С” Р·РјС–СЃС‚/РІРєР»Р°РґРµРЅРЅСЏ)
+toggle_sidebar_label = РџРѕРєР°Р·Р°С‚Рё/РїСЂРёС…РѕРІР°С‚Рё Р±С–С‡РЅСѓ РїР°РЅРµР»СЊ
+document_outline.title = РџРѕРєР°Р·Р°С‚Рё Р·РјС–СЃС‚ РґРѕРєСѓРјРµРЅС‚Р° (РїРѕРґРІС–Р№РЅРёР№ РєР»С–Рє, С‰РѕР± СЂРѕР·РіРѕСЂРЅСѓС‚Рё/Р·РіРѕСЂРЅСѓС‚Рё РІСЃС– РµР»РµРјРµРЅС‚Рё)
+document_outline_label = Р—РјС–СЃС‚ РґРѕРєСѓРјРµРЅС‚Р°
+attachments.title = РџРѕРєР°Р·Р°С‚Рё РІРєР»Р°РґРµРЅРЅСЏ
+attachments_label = Р’РєР»Р°РґРµРЅРЅСЏ
+thumbs.title = РџРѕРєР°Р·Р°С‚Рё РјС–РЅС–Р°С‚СЋСЂРё
+thumbs_label = РњС–РЅС–Р°С‚СЋСЂРё
+findbar.title = Р—РЅР°Р№С‚Рё РІ РґРѕРєСѓРјРµРЅС‚С–
+findbar_label = Р—РЅР°Р№С‚Рё
+thumb_page_title = РЎС‚РѕСЂС–РЅРєР° {{page}}
+thumb_page_canvas = РњС–РЅС–Р°С‚СЋСЂР° СЃС‚РѕСЂС–РЅРєРё {{page}}
+find_label = Р—РЅР°Р№С‚Рё:
+find_previous.title = Р—РЅР°Р№С‚Рё РїРѕРїРµСЂРµРґРЅС” РІС…РѕРґР¶РµРЅРЅСЏ С„СЂР°Р·Рё РґРѕ С‚РµРєСЃС‚Сѓ
+find_previous_label = РќР°Р·Р°Рґ
+find_next.title = Р—РЅР°Р№С‚Рё РЅР°СЃС‚СѓРїРЅРµ РІС…РѕРґР¶РµРЅРЅСЏ С„СЂР°Р·Рё РґРѕ С‚РµРєСЃС‚Сѓ
+find_next_label = Р”Р°Р»С–
+find_highlight = РџС–РґСЃРІС–С‚РёС‚Рё РІСЃС–
+find_match_case_label = Р— СѓСЂР°С…СѓРІР°РЅРЅСЏРј СЂРµРіС–СЃС‚СЂСѓ
+find_reached_top = Р”РѕСЃСЏРіРЅСѓС‚РёР№ РІРµСЂС… РґРѕРєСѓРјРµРЅС‚Р°, РїСЂРѕРґРѕРІР¶РµРЅРѕ Р·РЅРёР·Сѓ
+find_reached_bottom = Р”РѕСЃСЏРіРЅСѓС‚РёР№ РєС–РЅРµС†СЊ РґРѕРєСѓРјРµРЅС‚Р°, РїСЂРѕРґРѕРІР¶РµРЅРѕ Р·РІРµСЂС…Сѓ
+find_not_found = Р¤СЂР°Р·Сѓ РЅРµ Р·РЅР°Р№РґРµРЅРѕ
+error_more_info = Р”РµС‚Р°Р»С–
+error_less_info = РџСЂРёС…РѕРІР°С‚Рё РґРµС‚Р°Р»С–
+error_close = Р—Р°РєСЂРёС‚Рё
+error_version_info = PDF.js v{{version}} (Р·Р±С–СЂРєР°: {{build}})
+error_message = РџРѕРІС–РґРѕРјР»РµРЅРЅСЏ: {{message}}
+error_stack = РЎС‚РµРє: {{stack}}
+error_file = Р¤Р°Р№Р»: {{file}}
+error_line = Р СЏРґРѕРє: {{line}}
+rendering_error = РџСЂРё СЃС‚РІРѕСЂРµРЅРЅС– СЃС‚РѕСЂС–РЅРєРё РІРёРЅРёРєР»Р° РїРѕРјРёР»РєР°.
+page_scale_width = Р—Р° С€РёСЂРёРЅРѕСЋ СЃС‚РѕСЂС–РЅРєРё
+page_scale_fit = Р—Р° СЂРѕР·РјС–СЂРѕРј СЃС‚РѕСЂС–РЅРєРё
+page_scale_auto = РђРІС‚РѕРјР°С‚РёС‡РЅРѕ
+page_scale_actual = Р РµР°Р»СЊРЅРёР№ СЂРѕР·РјС–СЂ
 page_scale_percent = {{scale}}%
-loading_error_indicator = Помилка
-loading_error = При завантаженні PDF виникла помилка.
-invalid_file_error = Некоректний або пошкоджений PDF-файл.
-missing_file_error = PDF-файл відсутній.
-unexpected_response_error = Несподівана відповідь сервера.
-text_annotation_type.alt = [Анотація {{type}}]
-password_label = Введіть пароль, щоб відкрити цей PDF-файл.
-password_invalid = Невірний пароль. Будь ласка, спробуйте знову.
+loading_error_indicator = РџРѕРјРёР»РєР°
+loading_error = РџСЂРё Р·Р°РІР°РЅС‚Р°Р¶РµРЅРЅС– PDF РІРёРЅРёРєР»Р° РїРѕРјРёР»РєР°.
+invalid_file_error = РќРµРєРѕСЂРµРєС‚РЅРёР№ Р°Р±Рѕ РїРѕС€РєРѕРґР¶РµРЅРёР№ PDF-С„Р°Р№Р».
+missing_file_error = PDF-С„Р°Р№Р» РІС–РґСЃСѓС‚РЅС–Р№.
+unexpected_response_error = РќРµСЃРїРѕРґС–РІР°РЅР° РІС–РґРїРѕРІС–РґСЊ СЃРµСЂРІРµСЂР°.
+text_annotation_type.alt = [РђРЅРѕС‚Р°С†С–СЏ {{type}}]
+password_label = Р’РІРµРґС–С‚СЊ РїР°СЂРѕР»СЊ, С‰РѕР± РІС–РґРєСЂРёС‚Рё С†РµР№ PDF-С„Р°Р№Р».
+password_invalid = РќРµРІС–СЂРЅРёР№ РїР°СЂРѕР»СЊ. Р‘СѓРґСЊ Р»Р°СЃРєР°, СЃРїСЂРѕР±СѓР№С‚Рµ Р·РЅРѕРІСѓ.
 password_ok = OK
-password_cancel = Скасування
-printing_not_supported = Попередження: В цьому браузері не повністю підтримується друк.
-printing_not_ready = Попередження: PDF не повністю завантажений для друку.
-web_fonts_disabled = Веб-шрифти відключені: неможливо використовувати вбудовані PDF-шрифти.
-document_colors_not_allowed = PDF-документам не дозволено використовувати свої кольори: в браузері вимкнено параметр «Дозволити веб-сайтам використовувати свої кольори».
+password_cancel = РЎРєР°СЃСѓРІР°РЅРЅСЏ
+printing_not_supported = РџРѕРїРµСЂРµРґР¶РµРЅРЅСЏ: Р’ С†СЊРѕРјСѓ Р±СЂР°СѓР·РµСЂС– РЅРµ РїРѕРІРЅС–СЃС‚СЋ РїС–РґС‚СЂРёРјСѓС”С‚СЊСЃСЏ РґСЂСѓРє.
+printing_not_ready = РџРѕРїРµСЂРµРґР¶РµРЅРЅСЏ: PDF РЅРµ РїРѕРІРЅС–СЃС‚СЋ Р·Р°РІР°РЅС‚Р°Р¶РµРЅРёР№ РґР»СЏ РґСЂСѓРєСѓ.
+web_fonts_disabled = Р’РµР±-С€СЂРёС„С‚Рё РІС–РґРєР»СЋС‡РµРЅС–: РЅРµРјРѕР¶Р»РёРІРѕ РІРёРєРѕСЂРёСЃС‚РѕРІСѓРІР°С‚Рё РІР±СѓРґРѕРІР°РЅС– PDF-С€СЂРёС„С‚Рё.
+document_colors_not_allowed = PDF-РґРѕРєСѓРјРµРЅС‚Р°Рј РЅРµ РґРѕР·РІРѕР»РµРЅРѕ РІРёРєРѕСЂРёСЃС‚РѕРІСѓРІР°С‚Рё СЃРІРѕС— РєРѕР»СЊРѕСЂРё: РІ Р±СЂР°СѓР·РµСЂС– РІРёРјРєРЅРµРЅРѕ РїР°СЂР°РјРµС‚СЂ В«Р”РѕР·РІРѕР»РёС‚Рё РІРµР±-СЃР°Р№С‚Р°Рј РІРёРєРѕСЂРёСЃС‚РѕРІСѓРІР°С‚Рё СЃРІРѕС— РєРѕР»СЊРѕСЂРёВ».
